Fix nav on smaller screens

--- a/_sass/jekyll-theme-hacker.scss
+++ b/_sass/jekyll-theme-hacker.scss
@@ -154,30 +154,34 @@ ul li {
   margin-bottom: 10px;
 }
 
-.nav-list ul {
-  list-style-type: none;
-  padding-left: 0px;
-  margin-top: 0px;
+nav {
+  text-align: left;
+
+  ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+    margin-top: 20;
+    margin-bottom: 0;
+    padding-bottom: 0;
+
+    li {
+      display: inline-block;
+      margin-left: 0.5em;
+      padding-right: 20px;
+
+      a {
+        color: $enigma-purple;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: $bouquet;
+      }
+    }
+  }
 }
 
-.nav-list ul li {
-  list-style-image: none;
-  float: left;
-}
-
-.nav-list ul li a {
-  color: $enigma-purple;
-  display: block;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-  padding-left: 0px;
-  padding-right: 30px;
-}
-
-.nav-list ul li a:hover {
-  color: $bouquet;
-}
 
 blockquote {
   color: $blockquote-color;
